# quick-file-transfer

./: .editorconfig  .gitignore  CHANGELOG.md  Cargo.toml  Justfile  LICENSE  README.md  index.css  index.html
.cargo/: config.toml
.config/: nextest.toml
.github/workflows/: CI.yml  release.yml
benches/: bench_io_uring.rs
book/: book.toml
crates/generate-book/src/: main.rs
docker/: Dockerfile  Dockerfile.builder  Dockerfile_builder
man/: 404.html  chapter_1.html  chapter_10.html  chapter_11.html  chapter_12.html  chapter_2.html  chapter_3.html  chapter_4.html  chapter_5.html  chapter_6.html  chapter_7.html  chapter_8.html  chapter_9.html  print.html  searchindex.js  searchindex.json
scripts/: check_version.just  cross.just  default_vars.just  docker.just  git.just  install.sh  mod.just  package.bash  test.just
scripts/docker/: alpine_rust_builder.just  mod.just  test_container.just
scripts/dont_import/: pretty_print.just
src/: client.rs  config.rs  evaluate_compression.rs  get_free_port.rs  io_uring.rs  lib.rs  main.rs  mdns.rs  mmap_reader.rs  run.rs  send.rs  server.rs  ssh.rs  util.rs
src/config/: compression.rs  evaluate_compression.rs  get_free_port.rs  mdns.rs  misc.rs  ssh.rs  transfer.rs  util.rs
src/config/mdns/: discover.rs  register.rs  resolve.rs
src/config/transfer/: command.rs  listen.rs  send.rs  util.rs
src/config/transfer/send/: mdns.rs  ssh.rs
src/evaluate_compression/: compression_result.rs  print_results.rs  test_compress.rs
src/mdns/: discover.rs  register.rs  resolve.rs  util.rs
src/send/: client.rs  util.rs
src/server/: child.rs  path.rs  util.rs
src/ssh/: mdns_util.rs  private_key.rs  remote_cmd.rs  remote_find_free_port.rs  remote_info.rs  remote_session.rs  util.rs
tests/: test_qft.rs  test_qft_evaluate_compression.rs  test_qft_mdns.rs  test_qft_transfer.rs  tests.rs
tests/container_tests/: mod.rs  test_qft_mdns.rs  test_qft_reworked_ssh.rs  test_qft_ssh.rs  test_qft_transfer.rs  util.rs
tests/native_tests/: mod.rs  test_qft_basics.rs  test_qft_evaluate_compression.rs  test_qft_mdns.rs  test_qft_transfer.rs
tests/util/: mod.rs  regex_util.rs  test_content.rs  thread_cmd_spawning.rs  thread_safe_port_distributor.rs
www/: man
