[package]
name = "quick-file-transfer"
description = "Transfer files quickly, safely, and painlessly between hosts on a local network"
version = "0.8.0"
edition = "2021"
readme = "README.md"
homepage = "https://crambl.github.io/quick-file-transfer/"
license = "MIT"
authors = ["Marc Beck König <mbkj@tutamail.com>"]
repository = "https://github.com/CramBL/quick-file-transfer"
keywords = ["file-transfer", "mdns", "dnssd", "command-line"]

exclude = ["docker", "www", "book", "crates", ".github"]

[[bin]]
name = "qft"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.7", features = ["derive", "env"] }
log = "0.4.21"
stderrlog = "0.6.0"
strum = "0.26.2"
strum_macros = "0.26.4"
memmap2 = "0.9.4"
lz4_flex = "0.11"
flate2 = "1.0.30"
xz2 = "0.1.7"
bzip2 = "0.4.4"
mdns-sd = { version = "0.11.1", optional = true }          # Feature: mdns
comfy-table = { version = "7.1.1", optional = true }       # Feature: evaluate-compression
ssh-rs = { version = "0.5.0", optional = true }            # Feature: ssh
clap_complete = "4.5.6"
bincode = "1.3.3"
serde = { version = "1.0.203", features = ["derive"] }
tracing = { version = "0.1.36", features = ["log"] }
tracing-subscriber = { version = "^0.3" }

[dev-dependencies]
pretty_assertions = "1.4.0"
temp-dir = "0.1.11"
assert_fs = "1.0.13"
assert_cmd = "2.0.11"
predicates = "3.0.3"
testresult = "0.4.0"
fancy-regex = "0.13.0"
rand = "0.8.5"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
overflow-checks = false

[features]
default = ["mdns", "evaluate-compression", "ssh"]
evaluate-compression = ["dep:comfy-table"]
mdns = ["dep:mdns-sd"]
ssh = ["dep:ssh-rs"]
